--- a/front/src/app/pages/book/book.component.html
+++ b/front/src/app/pages/book/book.component.html
@@ -4,7 +4,7 @@
 <div class="chapters">
   @for(chapter of this.book.chapters; track chapter.id) {
   <a [routerLink]="[chapter.id]" class="chapter">
-    <h2>{{ chapter.title }}</h2>
+    <h2>Capitulo #{{ chapter.index }}</h2>
   </a>
   }
 </div>
