--- a/front/src/app/pages/book/book.component.scss
+++ b/front/src/app/pages/book/book.component.scss
@@ -1,28 +1,64 @@
-h1 {
-  text-align: center;
+.book {
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 50px;
+
+	.book-header {
+		display: flex;
+		gap: 1rem;
+		padding: 1rem;
+
+		.book-cover {
+			flex: none;
+			width: 200px;
+			img {
+				width: 100%;
+				height: auto;
+				border-radius: 12px;
+				object-fit: contain;
+			}
+		}
+
+		.book-info {
+			height: 100%;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+
+			.top {
+				display: flex;
+				flex-direction: column;
+				gap: 1rem;
+			}
+		}
+	}
 }
 
 .chapters {
-  display: flex;
-  gap: 1rem;
-  flex-direction: column;
-  padding: 1rem;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	gap: 1rem;
+	flex-direction: column;
+	padding: 1rem;
+	justify-content: center;
+	align-items: center;
+	max-width: 1200px;
+	margin: 0 auto;
 
-  .chapter {
-    padding: 1rem;
-    border: 2px solid #ccc;
-    border-radius: 12px;
-    width: 100%;
-    background-color: #f9f9f9;
-    transition: background-color 0.3s;
-    flex: none;
-    display: flex;
-    align-items: center;
+	.chapter {
+		padding: 1rem;
+		border: 2px solid var(--app-text-color);
+		border-radius: 12px;
+		width: 100%;
+		transition: background-color 0.3s;
+		flex: none;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
 
-    &:hover {
-      background-color: #e0e0e0;
-    }
-  }
+		&:hover {
+			background-color: var(--primary-color);
+			border-color: var(--primary-color);
+			// background-color: #e0e0e0;
+		}
+	}
 }
