--- a/front/src/app/pages/books/books.component.html
+++ b/front/src/app/pages/books/books.component.html
@@ -1,11 +1,14 @@
 <div id="books">
-  @for (book of books; track book.id) {
-  <a [routerLink]="[book.id]" class="book">
-    <h2>{{ book.title }}</h2>
-  </a>
-  }@empty {
-  <div class="no-books">
-    <p>No books available.</p>
-  </div>
-  }
+	@for (book of books; track book.id) {
+	<a [routerLink]="[book.id]" class="book-card">
+		<img [src]="book.cover" alt="" />
+		<div class="info">
+			<h2>{{ book.title }}</h2>
+		</div>
+	</a>
+	}@empty {
+	<div class="no-books">
+		<p>No books available.</p>
+	</div>
+	}
 </div>
