--- a/front/src/app/pages/books/books.component.scss
+++ b/front/src/app/pages/books/books.component.scss
@@ -1,14 +1,37 @@
 #books {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  gap: 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 20px;
+	gap: 20px;
 }
 
-.book {
-  padding: 20px;
-  border: 2px solid #ccc;
-  width: 100%;
-  border-radius: 12px;
+.book-card {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	border-radius: 5px;
+	overflow: hidden;
+	width: 300px;
+	transition: background-color 0.3s ease;
+
+	img {
+		width: 100%;
+		object-fit: cover;
+	}
+	.info {
+		padding: 20px;
+		border: 1px solid var(--primary-color);
+		border-top: none;
+		border-bottom-left-radius: inherit;
+		border-bottom-right-radius: inherit;
+		span {
+			width: 100%;
+			display: block;
+		}
+	}
+
+	&:hover {
+		background-color: var(--primary-color);
+	}
 }
