--- a/front/src/app/pages/books/books.component.scss
+++ b/front/src/app/pages/books/books.component.scss
@@ -1,7 +1,11 @@
+:host {
+	padding-bottom: 10px;
+}
 #books {
 	display: flex;
-	flex-direction: column;
 	align-items: center;
+	flex-wrap: wrap;
+	justify-content: center;
 	padding: 20px;
 	gap: 20px;
 }
@@ -33,5 +37,28 @@
 
 	&:hover {
 		background-color: var(--primary-color);
+	}
+}
+
+.pages {
+	display: flex;
+	justify-content: center;
+	gap: 8px;
+	margin: 20px 0;
+
+	.page {
+		padding: 6px 12px;
+		border: none;
+		border-radius: 4px;
+		border: 1px solid var(--primary-color);
+		cursor: pointer;
+		transition: background-color 0.3s ease, color 0.3s ease;
+
+		&.active,
+		&:hover {
+			background-color: var(--primary-color);
+			color: var(--app-text-color);
+			font-weight: bold;
+		}
 	}
 }
