--- a/front/public/assets/scss/_color.scss
+++ b/front/public/assets/scss/_color.scss
@@ -7,4 +7,8 @@
 	--white: #fdfdfd;
 	--lilac: #a972ff;
 	--dark-lilac: #331e65;
+	--dark-red: #f12237;
+	--dark-green: #157219;
+	--red: #ff0000;
+	--green: #00ff00;
 }
