--- a/front/public/assets/scss/global.scss
+++ b/front/public/assets/scss/global.scss
@@ -1,6 +1,6 @@
 @use 'color';
 @use 'color-definitions';
-
+@import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&display=swap');
 * {
 	padding: 0;
 	margin: 0;
@@ -9,6 +9,7 @@
 	text-decoration: none;
 	color: inherit;
 	position: relative;
+	font-family: 'Inknut Antiqua', serif;
 	z-index: 1;
 }
 
