--- a/front/src/app/pages/book/book.component.scss
+++ b/front/src/app/pages/book/book.component.scss
@@ -1,4 +1,18 @@
-$page-size: 900px;
+$page-size: 1200px;
+
+.book-background {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	height: 90vw;
+	max-width: 500px;
+	transform: rotate(90deg) translateY(-50%);
+	transform-origin: top left;
+	filter: blur(200px);
+	z-index: -1;
+	opacity: 0.6;
+	pointer-events: none;
+}
 
 .book {
 	position: relative;
@@ -28,6 +42,7 @@ $page-size: 900px;
 		}
 
 		.book-info {
+			position: relative;
 			flex: 1 1 0;
 			min-width: 0;
 			height: 100%;
@@ -50,21 +65,6 @@ $page-size: 900px;
 			.bottom {
 			}
 		}
-	}
-
-	.book-background {
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		height: 100vw;
-		max-width: 500px;
-		transform: rotate(90deg) translateY(-95%);
-		transform-origin: top left;
-		filter: blur(200px);
-		z-index: -1;
-		opacity: 0.6;
-		pointer-events: none;
 	}
 
 	.book-info-plus {
