--- a/front/src/app/pages/book/book.component.scss
+++ b/front/src/app/pages/book/book.component.scss
@@ -1,5 +1,8 @@
 $page-size: 1200px;
 
+@media (max-width: 768px) {
+}
+
 .book-background {
 	position: absolute;
 	top: 0;
@@ -30,6 +33,11 @@ $page-size: 1200px;
 		gap: 1.6rem;
 		height: 350px;
 		margin-bottom: 2rem;
+		@media (max-width: 768px) {
+			flex-direction: column;
+			align-items: center;
+			height: auto;
+		}
 
 		.book-cover {
 			flex: 0 0 200px;
@@ -55,7 +63,7 @@ $page-size: 1200px;
 				flex-direction: column;
 
 				h1 {
-					font-size: 2.5rem;
+					font-size: 2rem;
 					line-height: 3rem;
 					margin-bottom: 0.5rem;
 					font-weight: lighter;
@@ -81,7 +89,7 @@ $page-size: 1200px;
 				padding: 4px 8px;
 				border-radius: 12px;
 				margin-right: 0.5rem;
-				font-size: 0.8rem;
+				font-size: 1rem;
 				color: var(--app-text-color);
 				text-transform: capitalize;
 			}
