--- a/front/src/app/pages/books/books.component.html
+++ b/front/src/app/pages/books/books.component.html
@@ -3,7 +3,7 @@
 	<a [routerLink]="[book.id]" class="book-card">
 		<img [src]="book.cover" alt="" />
 		<div class="info">
-			<h2>{{ book.title }}</h2>
+			<span>{{ book.title }}</span>
 		</div>
 	</a>
 	}@empty {
