--- a/front/src/app/pages/books/books.component.scss
+++ b/front/src/app/pages/books/books.component.scss
@@ -3,7 +3,7 @@
 }
 #books {
 	display: flex;
-	align-items: center;
+	align-items: start;
 	flex-wrap: wrap;
 	justify-content: center;
 	padding: 20px;
@@ -16,12 +16,16 @@
 	flex-direction: column;
 	border-radius: 5px;
 	overflow: hidden;
-	width: 300px;
+	width: 250px;
 	transition: background-color 0.3s ease;
+	background-color: var(--primary-color);
+	border: 4px solid var(--primary-color);
 
 	img {
-		width: 100%;
+		width: 250px;
+		height: 355px;
 		object-fit: cover;
+		border-radius: 15px;
 	}
 	.info {
 		padding: 20px;
@@ -31,7 +35,15 @@
 		border-bottom-right-radius: inherit;
 		span {
 			width: 100%;
-			display: block;
+			line-height: 1.2rem;
+			font-size: 1rem;
+			height: 2.4rem;
+			display: -webkit-box;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: normal;
+			-webkit-line-clamp: 2;
+			-webkit-box-orient: vertical;
 		}
 	}
 
