--- a/front/src/app/components/header/header.component.scss
+++ b/front/src/app/components/header/header.component.scss
@@ -10,7 +10,7 @@
 
 header {
 	width: 100%;
-	height: 70px;
+	height: 80px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -18,6 +18,18 @@ header {
 	border-bottom: 2px solid black;
 	background-image: var(--degrader);
 	margin-bottom: 20px;
+	transition: background-image 0.3s 0.3s; // Adiciona transição para background-image
+
+	#logo {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		transition: transform 0.3s;
+
+		&.dark-theme {
+			transform: translateY(-8px);
+		}
+	}
 
 	nav {
 		display: flex;
