--- a/front/src/app/components/header/header.component.scss
+++ b/front/src/app/components/header/header.component.scss
@@ -18,7 +18,6 @@ header {
 	border-bottom: 2px solid black;
 	background-image: var(--degrader);
 	margin-bottom: 20px;
-	transition: background-image 0.3s 0.3s; // Adiciona transição para background-image
 
 	#logo {
 		display: flex;
@@ -28,6 +27,17 @@ header {
 
 		&.dark-theme {
 			transform: translateY(-8px);
+		}
+	}
+
+	.icons {
+		display: flex;
+		gap: 0.5rem;
+
+		.user {
+			display: flex;
+			align-items: center;
+			justify-content: center;
 		}
 	}
 
