--- a/front/src/app/pages/book/book.component.scss
+++ b/front/src/app/pages/book/book.component.scss
@@ -149,27 +149,40 @@ $page-size: 1200px;
 			}
 		}
 
-		.scraping-status {
+		.metadata {
 			display: flex;
+			gap: 1rem;
 			align-items: center;
-			justify-content: center;
-			border-radius: 5px;
-			background-color: var(--secondary-color);
-			color: var(--app-text-color);
-			font-size: 0.8rem;
-			font-weight: bold;
-			padding: 0.3rem 0.8rem;
 
-			&.scrapingStatusReady {
-				background-color: var(--scraping-status-ready-color);
+			.read {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				cursor: pointer;
 			}
 
-			&.scrapingStatusProcessing {
-				background-color: var(--scraping-status-processing-color);
-			}
+			.scraping-status {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				border-radius: 5px;
+				background-color: var(--secondary-color);
+				color: var(--app-text-color);
+				font-size: 0.8rem;
+				font-weight: bold;
+				padding: 0.3rem 0.8rem;
 
-			&.scrapingStatusError {
-				background-color: var(scraping-status-error-color);
+				&.scrapingStatusReady {
+					background-color: var(--scraping-status-ready-color);
+				}
+
+				&.scrapingStatusProcessing {
+					background-color: var(--scraping-status-processing-color);
+				}
+
+				&.scrapingStatusError {
+					background-color: var(scraping-status-error-color);
+				}
 			}
 		}
 	}
