feat: profile user

--- a/front/src/app/components/inputs/button/button.component.scss
+++ b/front/src/app/components/inputs/button/button.component.scss
@@ -9,6 +9,7 @@ button {
 	outline: none;
 	justify-content: center;
 	transition: 0.3s;
+	cursor: pointer;
 
 	&:hover {
 		background-color: var(--secondary-color);
