--- a/front/src/app/pages/book/book.component.html
+++ b/front/src/app/pages/book/book.component.html
@@ -12,7 +12,7 @@
 				</h6>
 			</div>
 			<div class="bottom">
-				<div>{{ book.chapters.length }} Capitulos</div>
+				<div>{{ getMaxChapterIndex() }} Capitulos</div>
 				<div>Lançamento {{ book.publication }}</div>
 			</div>
 		</div>
