feat: scrollbar color

--- a/front/public/assets/scss/_color-definitions.scss
+++ b/front/public/assets/scss/_color-definitions.scss
@@ -6,7 +6,7 @@
 	--primary-color: var(--orange);
 	--secondary-color: var(--dark-purple);
 	--scrollbar-color: var(--dark-gray);
-	--scrollbar-thumb-color: var(--dark-lilac);
+	--scrollbar-thumb-color: var(--orange);
 	--erro-message-color: var(--orange);
 	--scraping-status-ready-color: var(--dark-green);
 	--scraping-status-processing-color: var(--orange);
