--- a/front/src/app/components/inputs/list-checkbox/list-checkbox.component.html
+++ b/front/src/app/components/inputs/list-checkbox/list-checkbox.component.html
@@ -1,17 +1,19 @@
 @for (item of items; track $index) {
-<div>
-	<input
-		type="checkbox"
-		[checked]="item.checked"
-		(change)="OnItemChange(item)"
-		[attr.id]="'checkbox-' + $index"
-		[attr.name]="'checkbox-' + $index"
-		[attr.value]="item.id"
-		[attr.aria-label]="item.label"
-		[attr.aria-checked]="item.checked"
-	/>
-	<label [attr.for]="'checkbox-' + $index">
+<div class="custom-checkbox-wrapper">
+	<label class="custom-checkbox-label">
 		{{ item.label }}
+
+		<input
+			type="checkbox"
+			[checked]="item.checked"
+			(change)="OnItemChange(item)"
+			[attr.id]="'checkbox-' + $index"
+			[attr.name]="'checkbox-' + $index"
+			[attr.value]="item.id"
+			[attr.aria-label]="item.label"
+			[attr.aria-checked]="item.checked"
+		/>
+		<span class="custom-checkbox"></span>
 	</label>
 </div>
 }@empty{
