--- a/front/src/app/pages/dashboard/tags/tags.component.scss
+++ b/front/src/app/pages/dashboard/tags/tags.component.scss
@@ -1,16 +1,20 @@
 #tags-list {
-	max-height: 80vh;
+	max-height: 100%;
 	overflow-y: auto;
-	border: 1px solid var(--app-text-color);
-	border-radius: 4px;
-	background-color: var(--app-background-color);
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	padding: 0 20px;
+	margin: 0 10px;
+	margin-bottom: 30px;
 
 	.tag-item {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		padding: 8px;
-		border-bottom: 1px solid var(--app-text-color);
+		border-radius: 4px;
+		background-color: var(--secondary-color);
 	}
 }
 
