--- a/front/src/app/pages/book/book.component.scss
+++ b/front/src/app/pages/book/book.component.scss
@@ -1,8 +1,5 @@
 $page-size: 1200px;
 
-@media (max-width: 768px) {
-}
-
 .book-background {
 	position: absolute;
 	top: 0;
@@ -71,6 +68,10 @@ $page-size: 1200px;
 			}
 
 			.bottom {
+				.admin-actions {
+					display: flex;
+					gap: 1rem;
+				}
 			}
 		}
 	}
@@ -80,15 +81,16 @@ $page-size: 1200px;
 		display: flex;
 		flex-direction: column;
 		gap: 1rem;
+		margin-bottom: 2rem;
 
 		.tags {
 			display: flex;
 			justify-content: center;
 			flex-wrap: wrap;
+			gap: 0.5rem;
 			span {
 				padding: 4px 8px;
 				border-radius: 12px;
-				margin-right: 0.5rem;
 				font-size: 1rem;
 				color: var(--app-text-color);
 				text-transform: capitalize;
@@ -105,6 +107,7 @@ $page-size: 1200px;
 			font-size: 1rem;
 			line-height: 1.5;
 			text-align: center;
+			white-space: pre-wrap;
 		}
 	}
 }
