--- a/front/public/assets/scss/global.scss
+++ b/front/public/assets/scss/global.scss
@@ -49,3 +49,36 @@ body {
 		font-size: 12px;
 	}
 }
+
+.placeholder {
+	background-color: #80808040;
+	position: relative;
+	overflow: hidden;
+
+	&::after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: -50%;
+		width: 50%;
+		height: 100%;
+		background: linear-gradient(
+			120deg,
+			transparent 0%,
+			rgba(255, 255, 255, 0.6) 50%,
+			transparent 100%
+		);
+		animation: light-beam-move 1.5s linear infinite;
+		pointer-events: none;
+		filter: blur(4rem);
+	}
+}
+
+@keyframes light-beam-move {
+	0% {
+		left: -50%;
+	}
+	100% {
+		left: 250%;
+	}
+}
