--- a/front/src/app/components/item-book/item-book.component.scss
+++ b/front/src/app/components/item-book/item-book.component.scss
@@ -1,13 +1,18 @@
+$width: 250px;
+
 .book-card {
 	display: flex;
-	align-items: center;
-	flex-direction: column;
-	border-radius: 5px;
-	overflow: hidden;
-	width: 250px;
-	transition: background-color 0.3s ease;
 	background-color: var(--primary-color);
 	border: 4px solid var(--primary-color);
+	border-radius: 5px;
+	overflow: hidden;
+	transition: background-color 0.3s ease;
+}
+
+.grid {
+	align-items: center;
+	flex-direction: column;
+	width: $width;
 
 	img {
 		width: 250px;
@@ -34,8 +39,56 @@
 			-webkit-box-orient: vertical;
 		}
 	}
+}
 
-	&:hover {
-		background-color: var(--primary-color);
+.list {
+	width: $width * 2.2;
+	height: 275px;
+	img {
+		width: $width * 0.8;
+		height: 100%;
+		object-fit: cover;
+		border-radius: 15px;
+	}
+	.info {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		height: 100%;
+		padding: 20px;
+		border: 1px solid var(--primary-color);
+		gap: 8px;
+
+		.title {
+			width: 100%;
+			line-height: 1.2rem;
+			font-size: 1rem;
+			height: 2.4rem;
+			display: -webkit-box;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: normal;
+			line-clamp: 2;
+			-webkit-box-orient: vertical;
+		}
+
+		.tags {
+			span {
+				background-color: red;
+			}
+		}
+
+		.description {
+			width: 100%;
+			line-height: 1.4rem;
+			font-size: 0.8rem;
+			height: 8.4rem;
+			display: -webkit-box;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: normal;
+			line-clamp: 2;
+			-webkit-box-orient: vertical;
+		}
 	}
 }
