--- a/front/src/app/pages/books/books.component.scss
+++ b/front/src/app/pages/books/books.component.scss
@@ -1,6 +1,3 @@
-:host {
-	padding-bottom: 10px;
-}
 #books {
 	display: flex;
 	align-items: start;
@@ -16,6 +13,16 @@
 		height: 355px;
 		border-radius: 15px;
 	}
+}
+
+.controller {
+	max-width: calc(255px * 5);
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding: 0 20px;
+	margin: auto auto;
 }
 
 .pages {
