feat: pagination at the bottom of the page

--- a/front/src/app/pages/books/books.component.html
+++ b/front/src/app/pages/books/books.component.html
@@ -25,6 +25,19 @@
 	</div>
 	}
 </div>
+<div class="controller">
+	<div class="pages">
+		@for(page of pagesToShow; track page) {
+		<div
+			class="page"
+			[class.active]="page === currentPage"
+			(click)="goToPage(page)"
+		>
+			{{ page }}
+		</div>
+		}
+	</div>
+</div>
 } @placeholder {
 <div class="controller">
 	<div class="pages">
