--- a/front/src/app/pages/user/outlet/outlet.component.html
+++ b/front/src/app/pages/user/outlet/outlet.component.html
@@ -1,1 +1,13 @@
+<aside>
+	<div id="header">
+		<div class="user-image">
+			<!-- <img src="assets/user.svg" alt="User" /> -->
+		</div>
+		<h1>Usuario</h1>
+	</div>
+	<nav>
+		<a routerLink="filter" routerLinkActive="active">Filtros</a>
+		<a routerLink="profile" routerLinkActive="active">Perfil</a>
+	</nav>
+</aside>
 <router-outlet />
