--- a/front/src/app/pages/user/profile/profile.component.html
+++ b/front/src/app/pages/user/profile/profile.component.html
@@ -1,17 +1,4 @@
-<h1>Configurações</h1>
+<h1>Profile</h1>
 <div class="options">
-	<div>
-		<h2>Filtro de conteudo</h2>
-		<div class="options">
-			@for (content of sensitiveContentList; track content) {
-			<app-checkbox
-				[value]="allowContent.includes(content.name)"
-				(change)="toggleContentAllow(content)"
-			>
-				{{ content.name }}
-			</app-checkbox>
-			}
-		</div>
-	</div>
 	<app-button (click)="logout()">Sair da sua conta</app-button>
 </div>
