--- a/front/src/app/pages/books/books.component.html
+++ b/front/src/app/pages/books/books.component.html
@@ -13,7 +13,7 @@
 		}
 	</div>
 	<div>
-		<app-select [items]="selectList" />
+		<app-select [items]="selectList" [select]="selectListItem()" />
 	</div>
 </div>
 <div id="books">
