--- a/front/src/app/components/info-book/info-book.component.html
+++ b/front/src/app/components/info-book/info-book.component.html
@@ -10,6 +10,7 @@
 		[class.selected]="selectedTab === tab.chapters"
 		class="container"
 	>
+		@defer (when modulesLoad[tab.chapters].load()) {
 		<div class="scrollable">
 			@for(chapter of chapters; track chapter.id) {
 			<a [routerLink]="[chapter.id]" class="chapter">
@@ -44,13 +45,17 @@
 			</a>
 			}
 		</div>
+		} @placeholder { @for (i of [].constructor(20); track $index) {
+		<div class="placeholder"></div>
+		} }
 	</div>
 	<div
 		id="covers"
 		[class.selected]="selectedTab === tab.covers"
 		class="container"
 	>
-		<div class="container-cover scrollable">
+		@defer (when modulesLoad[tab.covers].load()) {
+		<div class="scrollable">
 			@for(cover of covers; track cover.id) {
 			<div class="cover" [class.selected]="cover.selected">
 				<img [src]="cover.url" [alt]="'Cover ' + cover.id" />
@@ -58,6 +63,13 @@
 			</div>
 			}
 		</div>
+		}@placeholder {
+		<div class="placeholder-container">
+			@for (i of [].constructor(10); track $index) {
+			<div class="placeholder"></div>
+			}
+		</div>
+		}
 	</div>
 	<div
 		id="extra-info"
@@ -68,23 +80,31 @@
 			<div class="titles">
 				<h1>Titulos alternativos</h1>
 				<div>
-					@for(title of extraInfo.alternativeTitle; track title) {
+					@defer (when modulesLoad[tab.extraInfo].load()) { @for(title
+					of extraInfo.alternativeTitle; track title) {
 					<p class="item">{{ title }}</p>
 					}@empty {
 					<p>Nenhum titulo alternativo disponível</p>
-					}
+					}}@placeholder { @for (i of [].constructor(10); track
+					$index) {
+					<div class="placeholder"></div>
+					} }
 				</div>
 			</div>
 			<div class="sources">
 				<h1>Fontes</h1>
 				<div>
+					@defer (when modulesLoad[tab.extraInfo].load()) {
 					@for(source of extraInfo.originalUrl; track source) {
 					<a class="item" [href]="source" target="_blank">{{
 						this.urlTransform(source)
 					}}</a>
 					}@empty {
 					<p>Nenhuma fonte disponível</p>
-					}
+					}}@placeholder { @for (i of [].constructor(5); track $index)
+					{
+					<div class="placeholder"></div>
+					} }
 				</div>
 			</div>
 		</div>
