--- a/front/src/app/components/info-book/info-book.component.scss
+++ b/front/src/app/components/info-book/info-book.component.scss
@@ -50,6 +50,13 @@
 		align-items: center;
 	}
 
+	.placeholder {
+		width: 100%;
+		height: 75px;
+		border-radius: 12px;
+		margin: 10px 0;
+	}
+
 	.chapter {
 		padding: 0.6rem 1rem;
 		border-radius: 12px;
@@ -120,7 +127,7 @@
 }
 
 #covers {
-	.container-cover {
+	.scrollable {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, 225px);
 		grid-auto-rows: 350px;
@@ -131,6 +138,21 @@
 		padding: 1rem;
 		margin: 0 auto;
 		justify-content: center;
+	}
+	.placeholder-container {
+		display: grid;
+		grid-template-columns: repeat(auto-fit, 225px);
+		grid-auto-rows: 350px;
+		gap: 1rem;
+		padding: 1rem;
+		margin: 0 auto;
+		justify-content: center;
+	}
+	.placeholder {
+		width: 225px;
+		height: 350px;
+		border-radius: 12px;
+		margin: 10px 0;
 	}
 
 	.cover {
@@ -180,12 +202,25 @@
 			margin: 0.5rem 0;
 			border-bottom: 1px solid var(--primary-color);
 		}
+		.placeholder {
+			width: 100%;
+			height: 30px;
+			border-radius: 12px;
+			margin: 10px 0;
+		}
 	}
 	.sources {
 		.item {
 			background-color: var(--primary-color);
 			padding: 5px;
 			border-radius: 15px;
+		}
+		.placeholder {
+			display: inline-block;
+			width: 100px;
+			height: 30px;
+			border-radius: 12px;
+			margin: 0 10px;
 		}
 	}
 }
