--- a/front/src/app/components/info-book/info-book.component.html
+++ b/front/src/app/components/info-book/info-book.component.html
@@ -57,7 +57,11 @@
 		@defer (when modulesLoad[tab.covers].load()) {
 		<div class="scrollable">
 			@for(cover of covers; track cover.id) {
-			<div class="cover" [class.selected]="cover.selected">
+			<div
+				class="cover"
+				[class.selected]="cover.selected"
+				(dblclick)="selectCover(cover)"
+			>
 				<img [src]="cover.url" [alt]="'Cover ' + cover.id" />
 				<div class="metadata">{{ cover.title }}</div>
 			</div>
