--- a/front/src/app/components/aside/aside.component.scss
+++ b/front/src/app/components/aside/aside.component.scss
@@ -24,7 +24,7 @@
 
 .aside-content {
 	position: absolute;
-	top: 0;
+	top: 80px;
 	right: 0;
 	width: 300px;
 	max-width: 80%;
@@ -33,6 +33,7 @@
 	box-shadow: 2px 0 8px rgba(0, 0, 0, 0.15);
 	transform: translateX(100%);
 	overflow-y: auto;
+	padding: 0.6rem;
 	will-change: transform;
 
 	&:not([style*='calc']) {
@@ -42,13 +43,6 @@
 	.aside-container.open & {
 		transform: translateX(0);
 	}
-}
-
-.aside-header {
-	display: flex;
-	justify-content: flex-end;
-	padding: 1rem;
-	border-bottom: 1px solid #e0e0e0;
 }
 
 .close-icon {
